# k

./: .env  .env.production  .eslintrc.cjs  .gitignore  .prettierignore  ARCHITECTURE.md  ARIA_LABELS_IMPLEMENTATION.md  BUILD.md  CHANGELOG.md  CODE_SIGNING.md  COMPLETE_FIX_INSTRUCTIONS.md  CONTRIBUTING.md  CRASH_REPORTING_IMPLEMENTATION.md  CRITICAL_ALL_CONTENT_MISSING.md  CRITICAL_BUG_FOUND.md  CRITICAL_HERO_ISSUE_DIAGNOSIS.md  DB_MIGRATIONS_VERIFICATION.md  DEBUG_PACKAGE_IMPLEMENTATION.md  DEFENSIVE_PARSING_IMPLEMENTATION.md  DEVELOPER_NOTES.md  DIAGNOSTIC_COLLECTION_IMPLEMENTATION.md  DIAGNOSTIC_COMPLETE.md  DIAGNOSTIC_INVESTIGATION_RESULTS.md  DOCUMENTATION_VALIDATION_SUMMARY.md  DOWNLOAD_E2E_TESTS_IMPLEMENTATION.md  DOWNLOAD_ERROR_HANDLING_IMPLEMENTATION.md  DOWNLOAD_MOVIE_QUALITY_IMPLEMENTATION.md  EMERGENCY_DISABLE_VERIFICATION.md  ENCRYPTION_KEY_MANAGEMENT_VERIFICATION.md  ENV_SETUP.md  EPISODE_ORDERING_PRESERVATION_IMPLEMENTATION.md  ERROR_LOGGING_IMPLEMENTATION.md  FAVORITES_IMPLEMENTATION_VERIFICATION.md  FETCH_CHANNEL_CLAIMS_IMPLEMENTATION.md  FETCH_PLAYLISTS_IMPLEMENTATION.md  FILESYSTEM_RESTRICTIONS_IMPLEMENTATION.md  FINAL_FIX_SUMMARY.md  FORCED_UPDATE_TESTS_IMPLEMENTATION.md  FORCE_REFRESH_IMPLEMENTATION.md  GATEWAY_PRODUCTION_TEST_GUIDE.md  (+99 more)
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
backups/: 20260222_183803-db.metadata.json  20260222_183916-db.metadata.json  (+1 more)
src-tauri/: Cargo.toml  check_errors.txt  check_output.txt  tauri.conf.json  test_output.txt  test_results.txt
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/proptest-regressions/: cache_ttl_property_test.txt  content_parsing_property_test.txt  error_structure_property_test.txt  migration_property_test.txt  missing_claim_id_property_test.txt  partial_success_property_test.txt  response_structure_property_test.txt
src-tauri/src/: api_parsing_test.rs  async_completion_tests.rs  cache_ttl_property_test.rs  cdn_builder_determinism_property_test.rs  channel_id_format_validation_property_test.rs  channel_id_parameter_property_test.rs  commands.rs  content_parsing_property_test.rs  crash_reporting.rs  database.rs  database_initialization_test.rs  database_optimization_test.rs  diagnostics.rs  diagnostics_test.rs  download.rs  download_resumable_atomic_property_test.rs  emergency_disable_test.rs  encryption.rs  encryption_key_management_test.rs  error.rs  error_logging.rs  error_logging_test.rs  error_structure_property_test.rs  filesystem_access_test.rs  force_refresh_test.rs  gateway.rs  gateway_failover_property_test.rs  gateway_production_test.rs  hero_single_item_test.rs  hero_stream_filter_test.rs  http_range_property_test.rs  input_validation_test.rs  integration_test.rs  logging.rs  logging_test.rs  logging_unit_test.rs  main.rs  migration_clean_run_test.rs  migration_older_db_test.rs  migration_property_test.rs  (+22 more)
(+453 files in other folders)
